another possible fix for paragraph spacing

--- a/csss-site/src/events/tech_fair/static/tech_fair/2023/css/main.css
+++ b/csss-site/src/events/tech_fair/static/tech_fair/2023/css/main.css
@@ -518,6 +518,8 @@ li:before {
     height: 80px; 
     padding: 0;
 
+    float: left;
+
     overflow-y: scroll; 
 }
 #company-card-list > div > div > div > div {
@@ -711,8 +713,6 @@ li:before {
 
     letter-spacing: -2px; 
     font-family: "NotoSansGeorgian-Regular",-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,"Helvetica Neue",sans-serif;
-
-    width: 60vw;
 
     color: #aaa; 
 }
